Reduce menu item padding to prevent it from wrapping down

--- a/style.scss
+++ b/style.scss
@@ -5994,6 +5994,10 @@ div[class*="media-responsive_image_large"].media-element-container {
         &:hover a {
             text-shadow: 2px 2px 2px rgba(245,245,245,0.5);
         }
+
+        &:first-child {
+            margin-left: 0px;
+        }
     }
 
     a {
